--- a/Prelim/2014.md
+++ b/Prelim/2014.md
@@ -5,3 +5,10 @@ title: Prelim/2014
 
 [TOP page](../)
 ## 国内予選/2014
+### A 税率変更 (100) {#A}
+
+### B {#B}
+### C{#C}
+### D {#D}
+### E {#E}
+### F {#F}
