--- a/Prelim/2014.md
+++ b/Prelim/2014.md
@@ -1,14 +1,33 @@
 ---
 layout: default
-title: Prelim/2014
+title: 国内予選2014
 ---
 
 [TOP page](../)
-## 国内予選/2014
-### A 税率変更 (100) {#A}
+## 国内予選2014
+### A (100) - 税率変更 {#A}
+#### 問題概要
+税抜 $p$ 円、消費税率 $x$ %のとき税込価格は $\lfloor p\frac{100+x}{100} \rfloor$ 円である。  
+消費税率 $x$ %で計算された2商品の税込価格の合計 $s$ が与えられる。  
+消費税率が $y$ %に変更されたとき、2商品の税込価格の合計の最大値を求めよ。
 
-### B {#B}
-### C{#C}
-### D {#D}
-### E {#E}
-### F {#F}
+#### 制約
+- 複数ケース(ケース数は？)
+- $0 < x < 100$
+- $0 < y < 100$
+- $x \neq y$
+- $10 < s < 1000$
+- $1 \le (税抜価格) \le s-1$
+
+#### メモ
+素直に二重ループで解ける。
+
+### B (200) - 連鎖消滅パズル {#B}
+
+### C (300) - バンパイア {#C}
+
+### D (400) - 暗号化システム {#D}
+
+### E (500) - 橋の撤去 {#E}
+
+### G (800) - 円を横切るな! {#F}
