--- a/Prelim/2014.md
+++ b/Prelim/2014.md
@@ -3,6 +3,7 @@ layout: default
 title: 国内予選2014
 ---
 
+# **AOJ-ICPC memo**
 [TOP page](../)
 ## 国内予選2014
 ### A (100) - 税率変更 {#A}
@@ -12,7 +13,8 @@ title: 国内予選2014
 消費税率が $y$ %に変更されたとき、2商品の税込価格の合計の最大値を求めよ。
 
 #### 制約
-- 複数ケース(ケース数は？)
+- 入力はすべて整数
+- 複数ケース
 - $0 < x < 100$
 - $0 < y < 100$
 - $x \neq y$
