国内予選のページ作成

--- a/Prelim/2018.md
+++ b/Prelim/2018.md
@@ -8,7 +8,7 @@ title: 国内予選2018
 ## 国内予選2018
 ### A (100) - 所得格差 {#A}
 #### 問題概要
-$n$ 項の数列 $a_n$ のうち、平均値以下である項の数はいくらか。
+$n$ 項の数列 $a_i$ のうち、平均値以下である項の数はいくらか。
 
 #### 制約
 - 入力はすべて整数
