--- a/Prelim/2012.md
+++ b/Prelim/2012.md
@@ -7,6 +7,24 @@ title: 国内予選2012
 [TOP page](../)
 ## 国内予選2012
 ### A (100) - ミレニアム
+以下の暦において、入力の日付から1000年1月1日まで何日か求めよ。  
+暦 (3年周期の繰り返し)：  
+|日数|1月|2月|3月|4月|5月|6月|7月|8月|9月|10月|
+|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|
+|1年|20|19|20|19|20|19|20|19|20|19|
+|2年|20|19|20|19|20|19|20|19|20|19|
+|3年|20|20|20|20|20|20|20|20|20|20|
+
+#### 制約
+- 入力はすべて整数
+- 複数ケース (ケース数 $\le 100$)
+- $1 \le Y < 1000$
+- $1 \le M \le 10$
+- $1 \le D \le 20$
+
+#### メモ
+ケース数が少ないので、入力から1日ずつ進めて計算しても良い。  
+ケース数を見逃しても1年が何日かを前計算しておけば十分速くなる。
 
 ### B (150) - 繰り返す10進数
 
