--- a/Prelim/2015.md
+++ b/Prelim/2015.md
@@ -7,6 +7,21 @@ title: 国内予選2015
 [TOP page](../)
 ## 国内予選2015
 ### A (100) - 入学試験
+#### 問題概要
+$m$ 人の受験者がいて、点数は高い順に並んでいて $P_i$ である。  
+この中から$n_{min}$ 人以上 $n_{max}$ 人以下を選抜する。  
+ギャップ (合格者最低点 - 不合格者最高点) が最大になる合格者数を求めよ。  
+(ギャップが等しい場合、その中で最大の合格者数を選ぶ。)
+
+#### 制約
+- 入力はすべて整数
+- 複数ケース
+- $0 < n_{min} < n_{max} < m \le 200$
+- $0 \le P_i \le 10000$
+- $P_{n_{min}} > P_{n_{max}} + 1$ (条件を満たす合格者数が存在する)
+
+#### メモ
+添字合わせ入門編。
 
 ### B (150) - 短句
 
