--- a/Prelim/2003.md
+++ b/Prelim/2003.md
@@ -7,8 +7,38 @@ title: 国内予選2003
 [TOP page](../)
 ## 国内予選2003
 ### A (100) - When Can We Meet?
+#### 問題概要
+会議が開催される。  
+空いている日程が $n$ 人分与えられる。  
+最大の人数が参加できる最も早い日を出力せよ。  
+ただし $q$ 人以上参加できる日程がない場合は $0$ を出力せよ。
+
+#### 制約
+- 入力はすべて整数
+- 複数ケース
+- $1 \le q \le n \le 50$
+- $1 \le Date \le 100$
+
+#### メモ
+考察はないものの問題文や入力の把握に時間を取られた。
 
 ### B (100) - Get Many Persimmon Trees
+#### 問題概要
+グリッド上に $n$ 本の木が植えられている。  
+縦 $t$ 、横 $s$ の長方形の土地に収められる木の最大本数を求めよ。
+
+#### 制約
+- 入力はすべて整数
+- 複数ケース
+- $1 \le n < 500$
+- $1 \le w, h < 100$ (グリッドの大きさ)
+- $1 \le y_i \le h$ (木の座標)
+- $1 \le x_i \le w$
+- $1 \le t \le h$ (土地の大きさ)
+- $1 \le s \le w$
+
+#### メモ
+愚直 $O(n^4)$ が怪しかったので二次元累積和で $O(n^2)$ 。
 
 ### C (250) - The Secret Number
 
