--- a/Prelim/2004.md
+++ b/Prelim/2004.md
@@ -7,6 +7,22 @@ title: 国内予選2004
 [TOP page](../)
 ## 国内予選2004
 ### A (100) - Hanafuda Shuffle
+#### 問題概要
+$n$ 枚のカードの山がある。初期状態では下から $i$ 番目のカードの番号が $i$ である。  
+$1$ 回のカット操作では山の上から $p ～ p+c-1$ 番目の札を抜き取って一番上に乗せる。$p, c$ は $1$ 回ごとに変わる。  
+$r$ 回の操作終了時に一番上にあるカードの番号を出力せよ。
+
+#### 制約
+- 入力はすべて整数
+- 複数ケース
+- $1 \le n \le 50$
+- $1 \le r \le 50$
+- $p, c > 0$
+- $p + c \le n + 1$
+
+#### メモ
+問題文のとおりにシミュレーションできる。  
+操作ごとに配列を作成してもとの配列にコピーする方法をとった。
 
 ### B (150) - Red and Black
 
