--- a/Prelim/2007.md
+++ b/Prelim/2007.md
@@ -7,6 +7,17 @@ title: 国内予選2007
 [TOP page](../)
 ## 国内予選2007
 ### A (100) - ICPC 得点集計ソフトウェア
+#### 問題概要
+$n$ 人による採点のうち、最高点と最低点を除いた平均点を求めよ。
+
+#### 制約
+- 入力はすべて整数
+- 複数ケース
+- $3 \le n \le 100$
+- $0 \le s_i \le 1000$ (点数)
+
+#### メモ
+ソートを行う。s[1]からs[n-2]までを足し、$n-2$ で割る。
 
 ### B (200) - ログイン/ログアウト記録の解析
 
