--- a/Prelim/2008.md
+++ b/Prelim/2008.md
@@ -7,6 +7,17 @@ title: 国内予選2008
 [TOP page](../)
 ## 国内予選2008
 ### A (100) - 等しい合計点
+#### 問題概要
+太郎と花子はそれぞれカードを $n$ 枚、 $m$ 枚持っている。数字の和が等しくなるようにカードを1枚ずつ交換するとき、どれを相手に渡せばよいか。
+
+#### 制約
+- 入力はすべて整数
+- 複数ケース
+- $1 \le n, m \le 100$
+- $0 \le s_i \le 100$ (カードの点数)
+
+#### メモ
+2重ループ。判定は式変形せずにそのまま書くと速いと思う。
 
 ### B (200) - 月曜土曜素因数
 
