--- a/Prelim/2009.md
+++ b/Prelim/2009.md
@@ -7,6 +7,26 @@ title: 国内予選2009
 [TOP page](../)
 ## 国内予選2009
 ### A (100) - 次期町長
+#### 問題概要
+$0$ から $n-1$ と番号を振った $n$ 人でゲームを行う。  
+最初、碗に $p$ 個の小石が入っており、椀は番号 $0$ の人の前にある。  
+番号 $k$ の人は、次のいずれかの操作を行う。その後、椀を番号 $k+1\ mod\ n$ の人に渡す。
+1. 碗に小石がある場合、そのうち $1$ 個を取り手許に置く。
+2. 碗に小石がない場合、手許の石をすべて椀に戻す。  
+
+操作を行った後、ある人が石を手許に独占している場合、その人がゲームの勝者となる。  
+ゲームの勝者の番号を出力せよ。  
+ゲームは1,000,000回以内の操作で終了することが保証される。
+
+#### 制約
+- 入力はすべて整数
+- 複数ケース
+- $3 \le n \le 50$
+- $2 \le p \le 50$
+
+#### メモ
+「必要なステップ数は非常に多くなる」に惑わされず、問題をすべて読む。  
+「小石の数 == n」みたいにバグらせた。
 
 ### B (150) - 島はいくつある？
 
